--- a/scss/_form-header.scss
+++ b/scss/_form-header.scss
@@ -8,9 +8,9 @@
 //    margin: .5em 0;
 	}
 	.response {
-		max-width: 7em;
+//		max-width: 6em;
 //		font-size: .875em !important;
-		padding: .25em;
+//		padding: .25em;
 //		width: 4em;
 //		max-width: 6em;
 //		min-width: 4em;
